[package]
name = "tennis_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["rt", "rt-multi-thread", "macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11.5" }
tracing = "0.1.38"
reqwest = { default-features = false, features = ["json", "rustls-tls"], version = "0.11.18" }
serde = "1.0.164"
serde_json = "1.0.96"
serde_derive = "1.0.156"
itertools = "0.11.0"
chrono = "0.4.26"
chrono-tz = "0.8.2"
