[package]
name = "tennis_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version = "0.11.6" }
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
reqwest = { default-features = false, features = [
    "json",
    "rustls-tls",
], version = "0.11.18" }
serde = "1.0.164"
serde_json = "1.0.114"
serde_derive = "1.0.156"
itertools = "0.11.0"
chrono = "0.4.35"
chrono-tz = "0.8.5"
